--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,8 +1,8 @@
 html {
-    background-color: #e8f0ff;
+    background-color: #dddbff;
   }
 .MainLayout {
-    background-color: blue;
+    background-color: #dddbff;
 }
 .Header{
     display: flex;
@@ -11,21 +11,33 @@ html {
     width: fit-content;
     margin: auto;
     position: fixed;
-    top: 0;
+    justify-content: center;
     left: 0;
     right: 0;
     height: 0;
 }
 .HeaderButtons{
-    background-color: aqua;
-    padding: 1rem; 
+    background-color: #dbfdff;
+    border-radius: 10px;
+    margin: .1rem;
+    padding: 18%; 
     border: none;
-    color: white;
+    color: black;
     text-align: center;
     text-decoration: none;
+    box-shadow: 0 12px 16px 0 #dbfdff3b, 0 17px 50px 0 #dbfdff3b;
+
 }
 .HeaderButtons:hover {
-    background-color: #4CAF50; /* Green */
+    background-color: #ffdddb;
     color: white;
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+.ChildOfChrist{
+    margin: auto;
+    background-color: #dddbff;
+    padding: 5%;
+    padding-left: 10%;
+    padding-right: 10%;
+    text-align: center;
 }
