--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -17,7 +17,7 @@ html {
     height: 0;
 }
 .HeaderButtons{
-    background-color: #993d7e;
+    background-color: #993071;
     display: inline-block;
     border-radius: 10px;
     margin: .1rem;
@@ -26,16 +26,16 @@ html {
     padding-top: .5rem;
     padding-bottom: .5rem;
     border: none;
-    color: black;
+    color: white;
     text-align: center;
     text-decoration: none;
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 
 }
 .HeaderButtons:hover {
-    background-color: 	#2c2b6c;
+    background-color: 	#2c2960;
     color: white;
-    box-shadow: 0 12px 16px 0 #2c2b6c, 0 17px 50px 0 #2c2b6c;
+    box-shadow: 0 12px 16px 0 #2c2960, 0 17px 50px 0 #2c2960;
 }
 .ChildOfChrist{
     margin: auto;
@@ -50,6 +50,6 @@ html {
     height: 100%;
 }
 .jazzCup{
-    width: 100%;
-    height: 100%;
+    width: 50%;
+    height: 50%;
 }
